--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,24 @@ services:
     working_dir: /app
     volumes:
       - ./app:/app
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=root
+      - DB_PASSWORD=password
+      - DB_DATABASE_NAME=database
+      - NODE_ENV=development
+    depends_on:
+      - db
+  db:
+    image: postgres:11
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: database
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
+    hostname: postgres
+    restart: always
+    user: root
