--- a/app/package.json
+++ b/app/package.json
@@ -41,10 +41,15 @@
   "dependencies": {
     "class-validator": "^0.12.2",
     "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/jest": "^26.0.5",
-    "@types/node": "^14.0.23"
+    "@types/node": "^14.0.23",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
   }
 }
