--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.12.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0-alpha.6",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25"
   },
