--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "npm": "use yarn instead of npm."
   },
   "scripts": {
+    "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:prod": "node dist/main",
@@ -39,6 +40,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
