--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
     "tsyringe": "^4.3.0",
+    "type-async-decorator": "0.1.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
