--- a/app/package.json
+++ b/app/package.json
@@ -40,19 +40,24 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@nestjs/common": "^7.3.2",
+    "@nestjs/core": "^7.3.2",
+    "@nestjs/platform-express": "^7.3.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0-alpha.6",
-    "tsyringe": "^4.3.0",
+    "rxjs": "^6.6.0",
     "type-async-decorator": "0.1.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@nestjs/testing": "^7.3.2",
     "@types/jest": "^26.0.5",
     "@types/node": "^14.0.23",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.1.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7"
   }
