update test command

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
         run: docker-compose build
 
       - name: Lint
-        run: docker-compose run --rm app "yarn && yarn lint"
+        run: docker-compose run --rm app /bin/bash -c "yarn && yarn lint"
 
       - name: Format
-        run: docker-compose run --rm app "yarn format:check"
+        run: docker-compose run --rm app /bin/bash -c "yarn format:check"
