--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Test
-        run: docker-compose run --rm app "yarn && yarn test"
+        run: docker-compose run --rm app /bin/bash -c "yarn && yarn test"
