--- a/app/package.json
+++ b/app/package.json
@@ -56,9 +56,18 @@
     "@types/jest": "^26.0.5",
     "@types/node": "^14.0.23",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
     "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.3",
+    "ts-jest": "^26.1.4",
+    "ts-loader": "^8.0.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
 }
